--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,13 +37,13 @@ layout: compress
                 <hr class="hr-line">
                 <h3 class="title">
                     <a class="btn zoombtn" href="{{ site.url }}/about">
-                        {% translate about %}
+                        <!--{% translate about %}-->about
                     </a>
                     <a class="btn zoombtn" href="{{ site.url }}/posts">
-                        {% translate posts %}
+                        <!--{% translate posts %}-->posts
                     </a>
                     <a class="btn zoombtn" href="{{ site.url }}/projects">
-                        {% translate projects %}
+                        <!--{% translate projects %}-->projects
                     </a>
                 </h3>
             </div>
