--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: compress
                 <hr class="hr-line">
                 <h3 class="title">
                     <a href="{{ site.url }}">
-                        <p style="font-size:1rem;font-weight:300">{% t bio %}</p>
+                        <p style="font-size:1rem;font-weight:300">{{ site.bio }}</p>
                     </a>
                 </h3>
                 {% include social-links.html %}
