--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,13 +37,13 @@ layout: compress
                 <hr class="hr-line">
                 <h3 class="title">
                     <a class="btn zoombtn" href="{{ site.url }}/about">
-                        {% t about %}
+                        {{ t about }}
                     </a>
                     <a class="btn zoombtn" href="{{ site.url }}/posts">
-                        {% t posts %}
+                        {{ t posts }}
                     </a>
                     <a class="btn zoombtn" href="{{ site.url }}/projects">
-                        {% t projects %}
+                        {{ t projects }}
                     </a>
                 </h3>
             </div>
