Atualizações no layout e conteúdo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,13 +37,13 @@ layout: compress
                 <hr class="hr-line">
                 <h3 class="title">
                     <a class="btn zoombtn" href="{{ site.url }}/about">
-                        Sobre
+                        About
                     </a>
                     <a class="btn zoombtn" href="{{ site.url }}/posts">
-                        Postagens
+                        Posts
                     </a>
                     <a class="btn zoombtn" href="{{ site.url }}/projects">
-                        Projetos
+                        My projects
                     </a>
                 </h3>
             </div>
