--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#FF5599">
     <!-- CSS -->
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl_root }}">
     <!-- JS -->
