Projetos principais adicionados

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -26,9 +26,12 @@ layout: compress
                         {% if post.project %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                            <a class="zoombtn" href="{{ post.repo }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
-                            <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>
+                            <a href="{{ post.repo }}" target="_blank" class="btn zoombtn">Read More</a>
+                            {% if post.demo %}
+                            <a href="{{ post.demo }}" target="_blank" class="btn zoombtn">See in action</a>
+                            {% endif %}
                         </li>
                     </ul>
                       {% endif %}
