--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,9 +39,9 @@ layout: compress
                     <a class="btn zoombtn" href="{{ site.url }}/about">
                         About
                     </a>
-                    <a class="btn zoombtn" href="{{ site.url }}/posts">
-                        Posts
-                    </a>
+                    <!--<a class="btn zoombtn" href="{{ site.url }}/posts">-->
+                    <!--    Posts-->
+                    <!--</a>-->
                     <a class="btn zoombtn" href="{{ site.url }}/projects">
                         My projects
                     </a>
