--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,6 @@
 //colors
-$bodycolor           : #00C6A2;
-$black           	   : #000;
+$bodycolor           : #034236;
+$black           	 : #000;
 $white               : #fff;
 $color_gray          : #e8e8e8;
 $red                 : #FF4136;
@@ -18,7 +18,7 @@ $color_fuscous_gray  : #555;
 $color_alabaster     : #fcfcfc;
 $color_celeste       : #ccc;
 $color_pink_swan     : #bbb;
-$comp-color 	       : complement(#222);
+$comp-color 	     : complement(#222);
 
 //button colors
 $success			 : #5cb85c;
