--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -82,13 +82,13 @@
                     </li>{% endif %}
 				</ul><!-- /.dl-submenu -->
 			</li>
-			<li>
-				<a href="#">Posts</a>
-				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
-				</ul>
-			</li>
+			<!--<li>-->
+			<!--	<a href="#">Posts</a>-->
+			<!--	<ul class="dl-submenu">-->
+			<!--		<li><a href="{{ site.url }}/posts/">All Posts</a></li>-->
+			<!--		<li><a href="{{ site.url }}/tags/">All Tags</a></li>-->
+			<!--	</ul>-->
+			<!--</li>-->
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
 		        {% assign domain = '' %}
@@ -96,6 +96,7 @@
 		        {% assign domain = site.url %}
 		    {% endif %}
 		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
+			<li><a href="{{ site.url }}/tags/">Tags</a></li>
 		  {% endfor %}
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
