--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#00C6A2">
+    <meta name="theme-color" content="#034236">
     <!-- CSS -->
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl_root }}">
     <!-- JS -->
