--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -28,9 +28,9 @@ layout: compress
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ post.repo }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
-                            <a href="{{ post.repo }}" target="_blank" class="btn zoombtn">Read More</a>
+                            <a href="{{ post.repo }}" target="_blank" class="btn">Read More</a>
                             {% if post.demo %}
-                            <a href="{{ post.demo }}" target="_blank" class="btn zoombtn">See in action</a>
+                            <a href="{{ post.demo }}" target="_blank" class="btn">See in action</a>
                             {% endif %}
                         </li>
                     </ul>
